--- a/game.html
+++ b/game.html
@@ -20,14 +20,11 @@
     console.log("Message from server ", event.data);
     try {
       const state = JSON.parse(event.data);
-      console.log(state);
 
       Object.keys(state.players).forEach(id => {
         const { position } = state.players[id];
 
         if (!playerInstances[id]) {
-          console.log(`new player: ${position.x} ${position.y}`);
-
           const rect = new fabric.Rect({
             top: position.y,
             left: position.x,
@@ -41,6 +38,7 @@
           canvas.add(rect);
         } else {
           // just move the player instance
+          console.log(`updated position: (${position.x}, ${position.y})`)
           playerInstances[id].set({ top: position.y, left: position.x });
         }
 
