--- a/player.html
+++ b/player.html
@@ -1,21 +1,26 @@
 <!-- render a mobile friendly canvas -->
-<canvas id="canvas" width="300" height="300"></canvas>
-<script src="https://cdn.jsdelivr.net/npm/fabric"></script>
-
+<script src="joy.js"></script>
+<body>
+  <div id="joyDiv" style="width:50vh;height:50vh;margin-bottom:20px; position: absolute; bottom:10vh; margin-left: auto; margin-right: auto; left: 0; right: 0"></div>
+</body>
 <script>
   const ARROW_LEFT = 37;
   const ARROW_UP = 38;
   const ARROW_RIGHT = 39;
   const ARROW_DOWN = 40;
 
-  const socket = new WebSocket("wss://f4fb-2602-fb65-0-100-fdb4-4aa9-11d1-b26.ngrok-free.app");
-  const canvas = new fabric.Canvas('canvas');
-
   // Player state
   const direction = {
     x: 0,
     y: 0,
   };
+  const Joy1 = new JoyStick('joyDiv', {}, function(stickData) {
+    direction.x = stickData.x/100.0
+    direction.y = -(stickData.y/100.0)
+});
+  const socket = new WebSocket("wss://f4fb-2602-fb65-0-100-fdb4-4aa9-11d1-b26.ngrok-free.app");
+
+
 
   // connect as player
   socket.addEventListener("open", (event) => {
