--- a/public/game.html
+++ b/public/game.html
@@ -8,6 +8,7 @@
 
   
   <script>
+    // ------- Websocket / game state handling -------- //
     const socket = new WebSocket(CONFIG.websocketEndpoint);
 
     // connect as view
@@ -30,16 +31,15 @@
           } else {
             // just move the player instance
             console.log(`updated position: (${position.x}, ${position.y})`)
-            playerInstances[id].set({ top: position.y, left: position.x });
+            // TODO: update player position
           }
-
-          canvas.renderAll();
         });
       } catch (e) {
         console.error('malformed game state!', e);
       }
     });
 
+    // ------- phaser painting -------- //
     class Example extends Phaser.Scene
     {
         constructor ()
