--- a/public/game.html
+++ b/public/game.html
@@ -17,6 +17,63 @@
           this.nose = {};
         }
 
+        drawNose({ x, y }) {
+          this.nose = this.physics.add.image(x, y, 'nose');
+        }
+
+        checkForFinish() {
+
+        }
+
+        handleWSMessage(message) {
+          try {
+            const event = JSON.parse(message.data);
+
+            switch (event.type) {
+              case "initView":
+                // sent on first connection
+                // should paint everything
+                if(event.gameState.nose) {
+                  this.drawNose(event.gameState.nose.currentLocation);
+                }
+
+                Object.keys(event.gameState.players).forEach(id => {
+                  this.playerInstances[id] = this.playerInit(event.gameState.players[id]);
+                });
+                break;
+              case "initPlayer":
+                // probably unneccessary check for non existence in game world
+                if (!this.playerInstances[event.player.id]) {
+                  this.playerInstances[event.player.id] = this.playerInit(event.player);
+                }
+                break;
+              case "move":
+                // adjusts or resets every player (regardless of whether movement happened)
+                const { players } = event.gameState;
+                Object.keys(players).forEach(id => {
+                  console.log(`player: ${JSON.stringify(players[id])}`);
+                  const { position, isMoving } = players[id];
+
+                  console.log(`moving to: ${JSON.stringify(position)}`);
+                  // move the player instance
+                  if (isMoving) {
+                    this.physics.moveTo(
+                      this.playerInstances[id],
+                      position.x,
+                      position.y,
+                      140, // speed (px/s), should be higher than ~2 * player.html refreshRate * gameState SPEED
+                    );
+                  } else {
+                    this.playerInstances[id].body.reset(position.x, position.y);
+                  }
+                });
+                break;
+            }
+          } catch (e) {
+            console.error('malformed game state!', e);
+          }
+        };
+
         preload () {
             this.load.path = 'assets/run/';
 
@@ -36,44 +93,6 @@
             this.load.path = 'assets/nose/';
 
             this.load.svg('nose', 'nose.svg',{width: 100, height: 100})
-
-            this.socket = new WebSocket(CONFIG.websocketEndpoint);
-
-            this.socket.addEventListener("open", (event) => {
-               this.socket.send(JSON.stringify({ type: "initView" }));
-             });
-
-            this.socket.addEventListener("message", (event) => {
-              try {
-                const state = JSON.parse(event.data);
-                Object.keys(state.players).forEach(id => {
-                  const { position, isMoving } = state.players[id];
-
-                  if (!this.playerInstances[id]) {
-                    this.playerInstances[id] = this.playerInit();
-                  } else {
-                    // just move the player instance
-                    if (isMoving) {
-                      this.physics.moveTo(
-                        this.playerInstances[id],
-                        position.x,
-                        position.y,
-                        140, // speed (px/s), should be higher than ~2 * player.html refreshRate * gameState SPEED
-
-                      );
-                    } else { 
-                      this.playerInstances[id].body.reset(position.x, position.y);
-                    }
-                  }
-                });
-
-                if(state.nose) {
-                  this.drawNose(state.nose.currentLocation);
-                }
-              } catch (e) {
-                console.error('malformed game state!', e);
-              }
-            });
         }
 
         create() {
@@ -106,44 +125,47 @@
             this.physics.world.on('overlap', (gameObject1, gameObject2, body1, body2) => {
               console.log("overlap")
             });
+
+            this.socket = new WebSocket(CONFIG.websocketEndpoint);
+
+            this.socket.addEventListener("open", (event) => {
+               this.socket.send(JSON.stringify({ type: "initView" }));
+             });
+
+            // arrow function here to preserve `this` in handleWSMessage (better way?)
+            this.socket.addEventListener("message", (message) => this.handleWSMessage(message));
         }
 
-        playerInit() {
+        playerInit({ name, position }) {
+            // create the player sprite and add it to a container
             const playerSprite = this.add.sprite(0, 0, 'run1').play('run');
             playerSprite.setScale(1.2);
-
             const playerContainer = this.add.container(400, 300, [playerSprite]);
-            this.physics.world.enableBody(playerContainer);
 
+            // add physics to player container
+            this.physics.world.enableBody(playerContainer);
             playerContainer.body.onOverlap = true;
             this.physics.add.overlap(playerContainer, this.nose)
 
-            // add face towards top
-            let rnd = 'Binh' + Math.random();
+            // download the player avatar
+            let rnd = name + Math.random();
             this.load.image({
               key: rnd,
-              url: 'https://api.dicebear.com/8.x/bottts/svg?seed=Mittens',
+              url: `https://api.dicebear.com/8.x/bottts/svg?seed=${name}`,
             });
-            let scene = this;
 
-            this.load.on(`filecomplete-image-${rnd}`, function (key, type, data) {
+            const scene = this;
+            this.load.on(`filecomplete-image-${rnd}`, () => {
+              // add face towards top of container
               const face = scene.add.image(0, -20, rnd);
               face.setScale(0.3);
               playerContainer.add(face);
             });
             this.load.start();
 
+            console.log(`adding new player ${name}`);
             return playerContainer;
         }
-
-        drawNose({x,y}) {
-          this.nose = this.physics.add.image(x, y, 'nose');
-        }
-
-        checkForFinish() {
-
-        }
-      
     }
 
     const config = {
