--- a/public/game.html
+++ b/public/game.html
@@ -8,7 +8,6 @@
 
 <body>
   <script>
-
     // ------- phaser painting -------- // 
     class Example extends Phaser.Scene {
       constructor() {
@@ -151,7 +150,7 @@
         // create the player sprite and add it to a container
         const playerSprite = this.add.sprite(0, 0, 'run1').play('run');
         playerSprite.setScale(1.2);
-        const playerContainer = this.add.container(400, 300, [playerSprite]);
+        const playerContainer = this.add.container(position.x, position.y, [playerSprite]);
 
         // add physics to player container
         this.physics.world.enableBody(playerContainer);
