--- a/public/player.html
+++ b/public/player.html
@@ -3,13 +3,30 @@
 <head>
   <script src="joy.js"></script>
   <script src="config.js"></script>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
-  <div id="joyDiv"
-    style="width:50vh;height:50vh;margin-bottom:20px; position: absolute; bottom:10vh; margin-left: auto; margin-right: auto; left: 0; right: 0">
+  <div class="title">Nose Goes!</div>
+  <div class="player"></div>
+  <div class="user-input">
+    <div class="name">
+      <input class="name" type="text" oninput="onNameChange(this.value)"></input>
+      <button>Submit</button>
+    </div>
+    <div hidden id="joyDiv"
+      style="width:50vh;height:50vh;margin-bottom:20px; position: absolute; bottom:10vh; margin-left: auto; margin-right: auto; left: 0; right: 0">
+    </div>
   </div>
+
+
 </body>
+
+<script>
+  const onNameChange = (name) => {
+    console.log(name);
+  }
+</script>
 
 <script>
   const ARROW_LEFT = 37;
