--- a/public/player.html
+++ b/public/player.html
@@ -24,42 +24,10 @@
 
 </body>
 
-<script>
-  const onNameChange = (name) => {
-    const img = document.getElementById('player-image');
-    img.src = name ? `https://api.dicebear.com/8.x/bottts/svg?seed=${name}` : 'assets/idle/idle1.png';
-  }
-  const onSubmit = () => {
-    const name = document.getElementById('name-input').value
-    if(!name) return;
-
-  }
-</script>
 
 <script>
-  const ARROW_LEFT = 37;
-  const ARROW_UP = 38;
-  const ARROW_RIGHT = 39;
-  const ARROW_DOWN = 40;
-
-  // Player state
-  const direction = {
-    x: 0,
-    y: 0,
-  };
-
-  const Joy1 = new JoyStick('joyDiv', {}, (stickData) => {
-    direction.x = Number(stickData.x);
-    direction.y = Number(-stickData.y);
-  });
 
   const socket = new WebSocket(CONFIG.websocketEndpoint);
-
-  // connect as player
-  socket.addEventListener("open", (event) => {
-    socket.send(JSON.stringify({ type: "initPlayer", data: { name: "Binh" } }));
-  });
-
   // handle server message
   // no current use
   socket.addEventListener("message", (event) => {
@@ -71,41 +39,26 @@
     console.log("Connection closed: ", event.data);
   });
 
-  // handle key inputs
-  window.addEventListener("keydown", ({ keyCode, repeat }) => {
-    if (repeat) return;
-    switch (keyCode) {
-      case ARROW_UP:
-        direction.y -= 1;
-        break;
-      case ARROW_DOWN:
-        direction.y += 1;
-        break;
-      case ARROW_LEFT:
-        direction.x -= 1;
-        break;
-      case ARROW_RIGHT:
-        direction.x += 1;
-        break;
-    }
+  const onNameChange = (name) => {
+    const img = document.getElementById('player-image');
+    img.src = name ? `https://api.dicebear.com/8.x/bottts/svg?seed=${name}` : 'assets/idle/idle1.png';
+  }
+  const onSubmit = () => {
+    const name = document.getElementById('name-input').value
+    if(!name) return; 
+    socket.send(JSON.stringify({ type: "initPlayer", data: { name } }));
+  }
+  // Player state
+  const direction = {
+    x: 0,
+    y: 0,
+  };
+
+  const Joy1 = new JoyStick('joyDiv', {}, (stickData) => {
+    direction.x = Number(stickData.x);
+    direction.y = Number(-stickData.y);
   });
 
-  window.addEventListener("keyup", ({ keyCode }) => {
-    switch (keyCode) {
-      case ARROW_UP:
-        direction.y += 1;
-        break;
-      case ARROW_DOWN:
-        direction.y -= 1;
-        break;
-      case ARROW_LEFT:
-        direction.x += 1;
-        break;
-      case ARROW_RIGHT:
-        direction.x -= 1;
-        break;
-    }
-  });
 
   // assumes that x and y are non-zero (because of where it is invoked in `onTick()`
   const normalizeDirection = ({ x, y }) => {
