fixing mobile issues

--- a/public/player.html
+++ b/public/player.html
@@ -4,6 +4,7 @@
   <script src="joy.js"></script>
   <script src="config.js"></script>
   <link rel="stylesheet" href="styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 </head>
 
 <body>
